apps/goatlint/src/snapshots/_-c fixtures__cli__config_ignore_patterns__ignore_extension__eslintrc.json fixtures__cli__config_ignore_patterns__ignore_extension@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c fixtures/cli/config_ignore_patterns/ignore_extension/eslintrc.json fixtures/cli/config_ignore_patterns/ignore_extension
working directory: 
----------

  x eslint-plugin-unicorn(no-empty-file): Empty files are not allowed.
   ,-[fixtures/cli/config_ignore_patterns/ignore_extension/main.ts:1:1]
   `----
  help: Delete this file or add some code to it.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
